kubernetes/workloads/apps/media-server/radarr/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: radarr-http
      port: 7878
      protocol: TCP
      targetPort: radarr-http
    - name: monitoring
      port: 9707
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: radarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.${DOMAIN}
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: https
  hostnames:
    - radarr.${DOMAIN}
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
